Chore:adding the new link as preload

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preload" href="components/ProductsPage.css" as="stylesheet" />
     <title>Movie Api</title>
     <script src="app.js" type="module" defer></script>
   </head>
