updating index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       as="stylesheet"
       type="text/css"
     />
+
+    <link
+      rel="preload"
+      href="components/DetailsPage.css"
+      as="stylesheet"
+      type="text/css"
+    />
     <title>Movie Api</title>
     <script src="app.js" type="module" defer></script>
   </head>
