Chore:for the added to the order page

--- a/index.html
+++ b/index.html
@@ -64,5 +64,14 @@
         <div id="details"></div>
       </section>
     </template>
+
+    <template id="order-page-template">
+      <h1>Order page</h1>
+      <section id="order-section">
+        <ul id="order-list" class="light-blue-mesh glass"></ul>
+        <p id="total"></p>
+        <!-- <button id="order-button" class="dark-blue-mesh glass">Order</button> -->
+      </section>
+    </template>
   </body>
 </html>
