--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/idb@7/build/umd.js"></script>
+
     <link
       rel="preload"
       href="components/ProductsPage.css"
