Chore:for the responsivenenss

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
           home
         </a>
 
-        <a class="navlink material-symbols-outlined" id="linkHome" href="/">
+        <a
+          class="navlink material-symbols-outlined hide-mobile"
+          id="linkHome"
+          href="/"
+        >
           vanilla_Products
         </a>
 
