Chore:for adding manifest file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       as="stylesheet"
       type="text/css"
     />
+    <link rel="manifest" href="/app.webmanifest" />
     <title>Vanilla Products</title>
     <script src="app.js" type="module" defer></script>
   </head>
