Chore:for adding the splash screen

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       type="text/css"
     />
     <link rel="manifest" href="/app.webmanifest" />
+
+    <!-- script for splash screen -->
+    <script
+      async
+      src="https://unpkg.com/pwacompat"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Vanilla Products</title>
     <script src="app.js" type="module" defer></script>
   </head>
