Chore:for adding the download button pwa

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
         <a
           class="navlink material-symbols-outlined"
+          id="downloadButton"
+          href="#"
+        >
+          download
+        </a>
+
+        <a
+          class="navlink material-symbols-outlined"
           id="linkOrder"
           href="/order"
         >
